fix: corrigindo qr code e icone do titulo da pagina

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <link rel="stylesheet" href="./src/css/style.css">
     <title>QR - Code</title>
-    <link rel="icon" href="../../img/Qr-Code/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./src/img/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <div>
-            <img src="../../img/Qr-Code/qrcode.png" alt="Qr Code - portfolio">
+            <img src="./src/img/qrcode.png" alt="Qr Code - portfolio">
         </div>
 
         <h3>
